fix(1.0.x): Javadoc sync + EventStore method ordering + Hiwepy copyright cleanup
- EventStore: fix read() method Javadoc ordering (was misplaced before wrong overload)
- Remove legacy 'Copyright (C) 2018 Hiwepy' Javadoc blocks (redundant with Apache 2.0)
- Sync Javadocs from2.0.x where missing (ClassNameFilter, EventStore, ProjectionPosition, etc.)